# learning

./: .gitignore
EPI/: ch6_arrays.ipynb  epi_ch4_propagate_rightmost_bit.py
R_/: dashboard.r
auth0/: mesh.blend  test_auth0.py  test_meshlib.py
aws/: boto_s3_presign.py  sqs_test.py
blender_/: bpy_baloon.py  bpy_spin.py  bpy_trace.py  finalize_mesh_tests.py  panel_demo.py
cpp/: CMakeLists.txt  README.md
cpp/gameoflife/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gameoflife  main.cpp
cpp/gameoflife/.qt/: QtDeploySupport.cmake
cpp/gameoflife/gameoflife_autogen/: moc_predefs.h
cpp/opencv/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
cpp/pybind_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
cpp/vscode/: a.out  first.cpp
cprogramming/: prog.py  prog01.c  prog01.i  prog01_wrap.c
dsa/: detect_cycles_in_directed_graph.py  mergesort.py  quickselect.py  quicksort.py  trie.py
flask/: app.py
gui/: gui_test.py  tk1.py  tk2.py  tk3.py  tk4.py  tk5.py  tk6.py  tk7.py  tk8.py
html5/: fullscreen.html
leetcode/: lc100_e_same_binary_tree.py  lc102_m_binary_tree_level_order_traversal.py  lc103_m_binary_tree_zigzag_level_order_traversal.py  lc104_e_max_depth_of_binary_tree.py  lc107_m_binary_tree_level_order_traversal_2.py  lc108_m_convert_sorted_array_to_binary_search_tree.py  lc110_e_balanced_binary_tree.py  lc121_e_best_time_to_buy_and_sell_stock.py  lc122_e_best_time_to_buy_and_sell_stock_2.py  lc126_h_word_ladder_2.py  lc127_word_ladder.py  lc132_palindrome_partitioning_2.py  (+52 more)
(+525 files in other folders)
